rpled-compile/tests/pixelscripts/invalid_varargs.pxl
pixelscript = {
    name = "InvalidVarargs",
    modules = {"LED"},
    entrypoint = "main"
}

function test(...)
    led.clear()
end

function main()
    test(1, 2, 3)
end
